--- a/src/main/resources/templates/subcategory.html
+++ b/src/main/resources/templates/subcategory.html
@@ -23,39 +23,62 @@
 
 
 <div class="container mt-5">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+    <div class="row row-cols-3 row-cols-sm-2 row-cols-md-4 g-3">
+         <div class="card-group  mt-3 " th:each="el:${subcategories}">
+             <div class="card shadow-sm p-3 mb-5 mr-3 rounded" style="background-color: bisque">
+                 <a th:href="@{'/subcategory/' + ${el.id}}">
+                     <img th:src="@{'../picsUp/'+${el.getImagePath()}}" alt="" width="100" height="200" class="card-img-top shadow-sm">
+                 </a>
 
-        <div class="card-group  mt-3 " th:each="el:${subcategories}">
-            <div class="card shadow-sm p-3 mb-5 mr-3 rounded" style="background-color: bisque">
 
-                <img th:src="@{'../picsUp/'+${el.getImagePath()}}" alt="" width="100" height="200" class="card-img-top">
+                 <h6 th:text="'Category Id ' + ${el.id}" />
+                 <h4 th:text="${el.name}" /><br/>
+                 <h6 th:text="'Parent Id  '+ ${el.parentId}" />
+                 <p th:text="${el.description}" />
+                 <div class="card-footer">
+                     <div class="d-grid gap-1 col-10 mx-auto">
+                         <a th:href="@{'/subcategory/' + ${el.id}}"     class="=btn btn-sm btn-warning mb-2">Субкатегории</a>
+                         <a th:href="'/category/' + ${el.id}"        class="=btn btn-sm btn-info mb-2" >Добавить подкатегорию</a>
+                         <a th:href="'/categoryEdit/' + ${el.id}"    class="=btn btn-sm btn-primary mb-2">Редактировать</a>
+                         <hr>
+                         <a th:href="'/categoryRemove/' + ${el.id}" class="btn btn-sm btn-danger mb-2">Удалить</a>
+                     </div>
+                 </div>
+             </div>
+
+         </div><!--Card group-->
+
+    </div><!--Row-->
 
 
-                <h5 th:text="${el.id}" />
-                <h5 th:text="${el.name}" /><br/>
-                <p>Номер родительской категории</p>
-                <h5 th:text="${el.parentId}" />
-                <p th:text="${el.description}" />
-                <div class="card-footer">
-                    <div class="d-grid gap-1 col-10 mx-auto">
-                        <a th:href="'/subcategory/' + ${el.id}"     class="=btn btn-sm btn-warning mb-2">Субкатегории</a>
-                        <a th:href="'/category/' + ${el.id}"        class="=btn btn-sm btn-info mb-2" >Добавить подкатегорию</a>
-                        <a th:href="'/categoryEdit/' + ${el.id}"    class="=btn btn-sm btn-primary mb-2">Редактировать</a>
-                        <hr>
-                        <a th:href="'/categoryRemove/' + ${el.id}" class="btn btn-sm btn-danger mb-2">Удалить</a>
 
+
+
+
+
+
+</div><!--Container-->
+<div class="container">
+            <h3 class="py-3">Products</h3>
+    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-3">escho
+        <!--<div class="col col-auto">-->
+            <div class="card-group" th:each="pr:${items}">
+
+                <div class="card">
+                    <a th:href="@{'/product/' + ${pr.id}}">
+                        <img th:src="@{'../picsUp/'+${pr.getImagePath()}}" alt="" width="100" height="200" class="card-img-top shadow-sm">
+                    </a>
+
+                    <div class="card-body">
+                        <h4 th:text="${pr.getName()}"></h4>
+                    </div>
+                    <div class="card-footer">
+                        <h6 th:text="'Price '+${pr.getPrice()}"></h6>
                     </div>
                 </div>
             </div>
-
-        </div>
+        <!--</div>-->
     </div>
-
-
-
-
-
-
 </div>
 
 
