Adding Pictures workingъ Subcategory  controller refactored pictures added Category and Product remover added Ифыу category/add image path added working Path Maker developing working? Category editor corrected ProductController editor corrected CategoryController list adding Catalog groupped List Test building Recursive Thymeleaf List added!!!!!

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,8 +14,8 @@
 
 <header th:insert="blocks/header :: header"></header>
 
-<img th:src="@{../images/cat1.jpg}"/>
-<p th:text="'Привет, ' + ${title} + '!'" />
+<!--<img th:src="@{../images/cat1.jpg}"/>
+<p th:text="'Привет, ' + ${title} + '!'" />-->
 
         <main>
 
