Adding Pictures workingъ Subcategory  controller refactored pictures added Category and Product remover added Ифыу category/add image path added working Path Maker developing working? Category editor corrected ProductController editor corrected CategoryController list adding Catalog groupped List Test building Recursive Thymeleaf List added!!!!!

--- a/src/main/resources/templates/blocks/fragments.html
+++ b/src/main/resources/templates/blocks/fragments.html
@@ -28,11 +28,10 @@
 
 <div th:fragment="subListForCard(listObj)" th:remove="tag" xmlns:th="http://www.thymeleaf.org">
     <ul th:each="entry:${listObj.getChildrenSet()}">
-        <li th:text="'En Name '+${entry.name}">
-        </li>
-        <ul th:include="blocks/fragments :: subListForCard(${entry})">
-        </ul>
-        <li >inner entry</li>
+<!--        <li th:text="'En Name '+${entry.name}"></li>-->
+        <li th:text="${entry.name}"></li>
+            <ul th:include="blocks/fragments :: subListForCard(${entry})"></ul>
+<!--        <li >inner entry</li>-->
 
     </ul>
 </div>
