Adding Pictures workingъ Subcategory  controller refactored pictures added Category and Product remover added Ифыу category/add image path added working Path Maker developing working? Category editor corrected ProductController editor corrected CategoryController list adding Catalog groupped List Test building Recursive Thymeleaf List added!!!!! Layout makeUp alittle

--- a/src/main/resources/templates/blocks/fragments.html
+++ b/src/main/resources/templates/blocks/fragments.html
@@ -22,7 +22,7 @@
             <div th:text="${entry.name}"> </div>
         </a>
 
-            <div  th:include="blocks/fragments :: subListForCard(${entry})"></div>
+            <div  th:insert="blocks/fragments :: subListForCard(${entry})"></div>
     </div>
 </div>
 
